# zzavnad

./: .gitignore  .gitmodules  BUILD_INSTALL_FLOW_REPORT.md  CMakeLists.txt  CMakePresets.json  CppProperties.json  FIX_CMAKE_MODULE_PATH_RESOLUTION.md  FIX_GM3ZZA_RESOURCES_PATH.md  README  ROSE_COLOR_CONVERSION.md  SHARED_CMAKE_MODULE_LAYOUT.md  ZZVNAD.aip  clear_icon_cache.ps1  convert_rose_to_peach.ps1  zzavnad.rc.in
.github/: copilot-instructions.md
ZZVNAD-cache/part2/: disk1.cab  output-info.ini
api/: CMakeLists.txt  Doxyfile.in
cmake/: INTEGRATION_SUMMARY.md  QUICKSTART_ICON_HELPER.md  README_ICON_HELPER.md  README_ZZAVNAD_ICONS.md  convert_png_to_ico.cmake  fftw_helper.cmake  icon_helper.cmake
include/: calib_data.hpp  display.hpp  display_control.hpp  display_legend.hpp  main.hpp  marker_table.hpp  markers.hpp  nvna_control.hpp  nvna_iface.hpp  source_control.hpp  sp_data.hpp  window.hpp
include/displays/: s11_ma.hpp  s11_raw.hpp  s11_rj.hpp  s11_rx.hpp  s11_smith.hpp  s11_swr.hpp  s11_tdr.hpp  s11_z_polar.hpp  s21_gain.hpp
src/: app.cpp.in  calib_data.cpp  display.cpp  display_control.cpp  display_legend.cpp  main.cpp  marker_table.cpp  markers.cpp  nvna_control.cpp  nvna_iface.cpp  source_control.cpp  sp_data.cpp  window.cpp
userguide/: CMakeLists.txt  Doxyfile.in  new_header.tex
userguide/src/: data.dox  displays.dox  howto.dox  index.dox  overview.dox  release_notes.dox
